--- a/todo/css/index.css
+++ b/todo/css/index.css
@@ -106,6 +106,8 @@
     padding: 10px;
     height: 65%;
     word-break: keep-all;
+    word-wrap: break-word;
+    overflow: auto;
     line-height: 25px;
 }
 
